fix-overflowY-ProductCard

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -4,8 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items:center;
+  overflow-y: hidden; /*Vini-Bugador: evita que os cards passem a tela igual desgraçados*/
   gap: 8px;
   width: 100%;
+  /*border: 8px solid red;*/
   max-width: 692px;
   height: 100%;
   max-height: 839px;
@@ -14,12 +16,27 @@
 
 }
 
+.product-link {
+
+  position: relative;
+  text-align: center;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  
+
+}
+
 .product-card:hover {
   transform: translateY(-5px);
 }
 
 .product-card .card-product {
-  width: 250px;
+  width: 250px; /*Vini-devorador-de-codigos: isso muda a imagem de dentro do cartao*/
   max-width: 292px; 
   height: 321px;
   flex-shrink: 0;
@@ -31,7 +48,8 @@
   overflow: hidden;
   padding: 38px 20px 0;
   position: relative;
-
+  border: 8px solid black;
+  
 }
 
 .product-card .card-product .discount {
